# hello22

./: Cargo.toml
services/auth-service/: Cargo.toml
services/auth-service/crypto-service/: Cargo.toml
